--- a/kube-manifest/deployment.yaml
+++ b/kube-manifest/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: todo-app-deployment
+  name: todo-app-deployment2
   labels:
-    app: todo-app
+    app: todo-app2
 spec:
-  replicas: 2
+  replicas: 200
   selector:
     matchLabels:
-      app: todo-app
+      app: todo-app2
   template:
     metadata:
       labels:
-        app: todo-app
+        app: todo-app2
     spec:
       containers:
       - name: todo-app-container
