--- a/kube-manifest/service.yaml
+++ b/kube-manifest/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-app-service
+  name: todo-app-service2
 spec:
   selector:
-    app: todo-app
+    app: todo-app2
 
   type: LoadBalancer
   ports:
